syntax = "proto3";

package users;

service UsersService {
  rpc findOne (userId) returns (UserEntity) {}
}

message UserEntity {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
  string email = 6;
  bool verified = 7;
  string role = 8;
  string hashedRefreshToken = 9;
}

message userId {
  string id = 1;
}
